--- a/wwwroot/Html5ReportViewer.html
+++ b/wwwroot/Html5ReportViewer.html
@@ -12,7 +12,7 @@
     <link href="https://kendo.cdn.telerik.com/2022.1.301/styles/kendo.blueopal.min.css" rel="stylesheet" />
 
 	<!--If Kendo is used it should be added before the report viewer.-->
-	<script src="/api/reports/resources/js/telerikReportViewer-16.1.22.511.min.js/"></script>
+	<script src="/api/reports/resources/js/telerikReportViewer-16.1.22.622.min.js/"></script>
 
 	<style>
 		#reportViewer1 {
@@ -45,13 +45,13 @@
                     // The URL for custom report viewer template. The template can be edited -
                     // new functionalities can be added and unneeded ones can be removed.
                     // For more information please check http://www.telerik.com/help/reporting/html5-report-viewer-templates.html.
-                    // templateUrl: '/ReportViewer/templates/telerikReportViewerTemplate-16.1.22.511.html',
+                    // templateUrl: '/ReportViewer/templates/telerikReportViewerTemplate-16.1.22.622.html',
 
                     //ReportSource - report description
                     reportSource: {
                         // The report can be set to a report file name (trdx report definition) 
                         // or CLR type name (report class definition).
-                        report: "SupplierReport.trdp"
+                        report: "Barcodes Report.trdp"
                     },
 
                     // Specifies whether the viewer is in interactive or print preview mode.
