Added Supplier Report html

--- a/ReportViewer_Item_Log.html
+++ b/ReportViewer_Item_Log.html
@@ -201,12 +201,7 @@
         <div class="section last">
             <h2>Summary</h2>
             <ul style="padding-bottom: 10px; padding-left: 7px;">
-                <li style="color: none;">Added folder: Reports</li>
-<li style="color: none;">Added SampleReport.trdp</li>
-<li style="color: none;">Added Html5ReportViewer.html</li>
-<li style="color: none;">Installed NuGet package: Telerik.Reporting.OpenXmlRendering.Trial 16.1.22.622</li>
-<li style="color: none;">Installed NuGet package: Telerik.Reporting.Services.AspNetCore.Trial 16.1.22.622</li>
-<li style="color: none;">Added ReportsController.cs</li>
+                <li style="color: none;">Added SupplierReport.html</li>
 <li style="color: #FF0000;">Error: System.ArgumentOutOfRangeException: Index and length must refer to a location within the string.
 Parameter name: length
    at System.String.Substring(Int32 startIndex, Int32 length)
@@ -214,7 +209,7 @@ Parameter name: length
    at Telerik.Reporting.VsX.TemplateWizards.IT.Common.NetCoreWebItemTemplateWizardBase.ModifyStartupFile()
    at Telerik.Reporting.VsX.TemplateWizards.IT.Common.NetCoreWebItemTemplateWizardBase.RunFinishedCore()
    at Telerik.Reporting.VsX.TemplateWizards.IT.Common.ItemTemplateWizardBase.Microsoft.VisualStudio.TemplateWizard.IWizard.RunFinished()</li>
-<li style="color: #FF0000;">Error: Model state: ET RestService; URI /api/reports; CrN True; Tk </li>
+<li style="color: #FF0000;">Error: Model state: ET RestService; URI /api/reports; CrN False; Tk </li>
 
             </ul>
 
@@ -224,18 +219,11 @@ Parameter name: length
             <label for="show" class="show" unselectable="on"></label> 
 
             <ul id="details">
-                2022-09-01 8:52:42 PM
-<li style="color: none;">Build Started</li>
-<li style="color: none;">Build Completed</li>
-<li style="color: none;">Added folder: Reports</li>
-<li style="color: none;">Added SampleReport.trdp</li>
+                2023-01-20 8:54:40 PM
 <li style="color: none;">Adding Common\TelerikViewerPage.html.ServiceUrl project item</li>
-<li style="color: none;">Added Html5ReportViewer.html</li>
+<li style="color: none;">Added SupplierReport.html</li>
 <li style="color: none;">Adding Common\TelerikViewerPage.html.ReportServer project item</li>
-<li style="color: none;">Installed NuGet package: Telerik.Reporting.OpenXmlRendering.Trial 16.1.22.622</li>
-<li style="color: none;">Installed NuGet package: Telerik.Reporting.Services.AspNetCore.Trial 16.1.22.622</li>
-<li style="color: none;">Folder Controllers already exists</li>
-<li style="color: none;">Added ReportsController.cs</li>
+<li style="color: none;">File exist: D:\Users\Ken\Documents\Work\Wett\2021\WETT\ParamountComputers\WETT\Controllers\ReportsController.cs</li>
 <li style="color: #FF0000;">Error: System.ArgumentOutOfRangeException: Index and length must refer to a location within the string.
 Parameter name: length
    at System.String.Substring(Int32 startIndex, Int32 length)
@@ -243,7 +231,7 @@ Parameter name: length
    at Telerik.Reporting.VsX.TemplateWizards.IT.Common.NetCoreWebItemTemplateWizardBase.ModifyStartupFile()
    at Telerik.Reporting.VsX.TemplateWizards.IT.Common.NetCoreWebItemTemplateWizardBase.RunFinishedCore()
    at Telerik.Reporting.VsX.TemplateWizards.IT.Common.ItemTemplateWizardBase.Microsoft.VisualStudio.TemplateWizard.IWizard.RunFinished()</li>
-<li style="color: #FF0000;">Error: Model state: ET RestService; URI /api/reports; CrN True; Tk </li>
+<li style="color: #FF0000;">Error: Model state: ET RestService; URI /api/reports; CrN False; Tk </li>
 
             </ul>
         </div>
