--- a/wwwroot/Html5ReportViewer.html
+++ b/wwwroot/Html5ReportViewer.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Telerik HTML5 Report Viewer</title>
@@ -8,11 +8,11 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
-    <link href="https://kendo.cdn.telerik.com/2022.1.301/styles/kendo.common.min.css" rel="stylesheet" />
-    <link href="https://kendo.cdn.telerik.com/2022.1.301/styles/kendo.blueopal.min.css" rel="stylesheet" />
+    <link href="https://kendo.cdn.telerik.com/2022.3.913/styles/kendo.common.min.css" rel="stylesheet" />
+    <link href="https://kendo.cdn.telerik.com/2022.3.913/styles/kendo.blueopal.min.css" rel="stylesheet" />
 
 	<!--If Kendo is used it should be added before the report viewer.-->
-	<script src="/api/reports/resources/js/telerikReportViewer-16.2.22.1109.min.js"></script>
+	<script src="/api/reports/resources/js/telerikReportViewer-17.1.23.718.min.js/"></script>
 
 	<style>
 		#reportViewer1 {
@@ -45,7 +45,7 @@
                     // The URL for custom report viewer template. The template can be edited -
                     // new functionalities can be added and unneeded ones can be removed.
                     // For more information please check http://www.telerik.com/help/reporting/html5-report-viewer-templates.html.
-                    // 
+                    // templateUrl: '/ReportViewer/templates/telerikReportViewerTemplate-17.1.23.718.html',
 
                     //ReportSource - report description
                     reportSource: {
